--- a/assets/styles.css
+++ b/assets/styles.css
@@ -59,7 +59,7 @@ video {
   transition: all 250ms ease-in-out;
 }
 
-.video-block__controls:hover {
+.main__video-block:hover .video-block__controls {
   opacity: 1;
 }
 
@@ -87,6 +87,27 @@ video {
 .controls__panel button {
   cursor: pointer;
   font-size: 1.2rem;
+}
+
+.panel__volume-container {
+  position: relative;
+}
+
+.panel__volume-input {
+  position: absolute;
+  top: -0.4rem;
+  left: 0.6rem;
+  background-color: rgb(48 48 48);
+  transform-origin: left;
+  transform: rotate(-90deg);
+  opacity: 0;
+  transition: all 250ms ease-in-out;
+  padding: 0 0.6rem;
+  border-radius: 0.4rem;
+}
+
+.panel__volume-container:hover .panel__volume-input {
+  opacity: 1;
 }
 
 .panel__left {
