--- a/assets/styles.css
+++ b/assets/styles.css
@@ -41,6 +41,26 @@ main {
 }
 
 .main__video-block {
+  padding: 0.5rem;
+}
+
+.main__video-block:fullscreen .video-block__container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.main__video-block:fullscreen video {
+  width: 100%;
+}
+
+.main__video-block:fullscreen .video-block__controls {
+  background-color: black;
+  color: #fff;
+}
+
+.video-block__container {
   position: relative;
 }
 
@@ -56,10 +76,46 @@ video {
   width: 100%;
   padding: 0 1rem;
   opacity: 0;
-  transition: all 250ms ease-in-out;
+  transition: opacity 250ms ease-in-out;
 }
 
-.main__video-block:hover .video-block__controls {
+.controls__option {
+  font-size: 0.6rem;
+  height: 5rem;
+  width: 10rem;
+  position: absolute;
+  right: 2rem;
+  top: -6rem;
+  background-color: black;
+  border-radius: 0.4rem;
+  color: #fff;
+  padding: 1em;
+  overflow-y: scroll;
+  user-select: none;
+}
+
+.controls__option h2 {
+  margin-bottom: 1em;
+}
+
+.controls__option li {
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.controls__option li:not(:last-child) {
+  margin-bottom: 1.2em;
+}
+
+.hide {
+  display: none;
+}
+
+.opacity {
+  opacity: 1;
+}
+
+.video-block__container:hover .video-block__controls {
   opacity: 1;
 }
 
